--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 # Compiled class file
 *.class
 
+# Eclipse build directory
+/bin
+
+# Eclipse project files
+.project
+.classpath
+/.settings
+
 # Log file
 *.log
 
